// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<label
  className="sc-cykDdr dyuYOt"
>
  <input
    checked={true}
    className="sc-dRbDqh hWffKP"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-hQaVPy fnmkxG"
  />
</label>
`;

exports[`Switch renders RTL 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-cykDdr dyuYOt"
  >
    <input
      checked={true}
      className="sc-dRbDqh hWffKP"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-hQaVPy fnmkxG"
    />
  </label>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<label
  className="sc-cykDdr dyuYOt"
>
  <input
    checked={true}
    className="sc-dRbDqh kcwUWm"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-hQaVPy gRnUwY"
  />
</label>
`;

exports[`Switch renders Theme variant with Caption 1`] = `
<div
  className="sc-fNPocS jNWSlA"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-hogtv sc-dCkZnI gIziYG eORePE"
    color="bulma.100"
  >
    AM
  </span>
  <label
    className="sc-cykDdr dyuYOt"
  >
    <input
      checked={true}
      className="sc-dRbDqh kcwUWm"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-hQaVPy gRnUwY"
    />
  </label>
  <span
    checked={false}
    className="sc-hogtv sc-dCkZnI gIziYG bXiEvc"
    color="bulma.100"
  >
    PM
  </span>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <label
    className="sc-cykDdr cXvnkH"
    size="xs"
  >
    <input
      checked={true}
      className="sc-dRbDqh bvhMVg"
      id="test-switch-1"
      onChange={[Function]}
      size="xs"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-hQaVPy fnmkxG"
    />
  </label>
  <label
    className="sc-cykDdr cJQYmg"
    size="md"
  >
    <input
      checked={true}
      className="sc-dRbDqh bvhMVg"
      id="test-switch-2"
      onChange={[Function]}
      size="md"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-hQaVPy fnmkxG"
    />
  </label>
  <label
    className="sc-cykDdr bMkTpZ"
    size="lg"
  >
    <input
      checked={true}
      className="sc-dRbDqh bvhMVg"
      id="test-switch-3"
      onChange={[Function]}
      size="lg"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-hQaVPy fnmkxG"
    />
  </label>
</div>
`;

exports[`Switch renders with Caption 1`] = `
<div
  className="sc-fNPocS jNWSlA"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-hogtv sc-dCkZnI gIziYG eORePE"
    color="bulma.100"
  >
    OFF
  </span>
  <label
    className="sc-cykDdr dyuYOt"
  >
    <input
      checked={true}
      className="sc-dRbDqh hWffKP"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-hQaVPy fnmkxG"
    />
  </label>
  <span
    checked={false}
    className="sc-hogtv sc-dCkZnI gIziYG bXiEvc"
    color="bulma.100"
  >
    ON
  </span>
</div>
`;
